# sysrepo

./: .codecov.yml  .editorconfig  .gitignore  .lgtm.yml  .travis-install-libs-osx.sh  .travis-install-libs.sh  .travis-install-osx.sh  .travis-install.sh  .travis.yml  CHANGES  CMakeLists.txt  CODINGSTYLE.md  DB_PLG_PERF.md  Doxyfile.in  FindSysrepo.cmake  INSTALL.md  LICENSE  NOTICE  README.md  SECURITY.md  VERSIONING.md  codecov.yml  libsysrepo.pc.in  plugin_dev_doc.md  sysrepo-config.cmake  sysrepo.pc.in  uncrustify.cfg  zz-sysrepo-disable-fs-protected_regular.conf
bindings/: CMakeLists.txt
bindings/cpp/: CMakeLists.txt  libSysrepo-cpp.pc.in  sysrepo-cpp.pc.in
bindings/python/: CMakeLists.txt  run_python_test.sh  sysrepo.i
bindings/swig_base/: base.i  cpp_classes.i  libsysrepoEnums.i  libyangEnums.i  python_base.i
examples/: CMakeLists.txt  README.md  application_changes_example.c  application_example.c  application_fd_watcher_example.c  event_notif_sub_example.c  event_notif_sub_tree_example.c  ex1.c  examples.yang  notif_send_example.c  notif_subscribe_example.c  oper_data_example.c  oper_data_poll_example.c  oper_data_pull_example.c  oper_data_push_example.c  oper_pull_push_example.c  rpc_example.c  rpc_send_example.c  rpc_subscribe_example.c  rpc_tree_example.c  sr_app_read_example.c  sr_delete_item_example.c  sr_get_changes_iter_example.c  sr_get_item_example.c  sr_get_items_example.c  sr_get_items_iter_example.c  sr_get_subtree_example.c  sr_get_subtree_iter_example.c  sr_get_subtrees_example.c  sr_rpc_example.c  sr_rpc_tree_example.c  sr_set_item_example.c
examples/cyplugin/: .gitignore  Makefile  README  plugmain.c  pysysrepo.h  pysysrepo.pyx  usermod.py
examples/notifd/: README.md  example_sn_data.xml  notifd_client.c
examples/plugin/: README.md  oven.c  oven.yang
examples/plugins/: CMakeLists.txt  oven.c  turing-machine.c
examples/python/: DeleteItemExample.py  GetItemExample.py  GetItemsExample.py  GetItemsIterExample.py  SetItemExample.py
examples/yang/: iana-if-type.yang  ietf-interfaces.data.xml  ietf-yang-types@2013-07-15.yin  turing-machine.data.xml  turing-machine.yang
src/: .sysrepo.c.swp  CMakeLists.txt  access_control.c  access_control.h  cl_common.c  cl_common.h  cl_subscription_manager.c  cl_subscription_manager.h  cl_subscriptions.c  cl_subscriptions.h  client_library.c  client_library.h  cm_session_manager.c  cm_session_manager.h  common.c  common.h  common.h.in  common_types.h  config.h.in  connection_manager.c  connection_manager.h  context_change.c  context_change.h  daemon.c  data_manager.c  data_manager.h  dm_location.h.in  edit_diff.c  edit_diff.h  log.c  log.h  ly_wrap.c  ly_wrap.h  lyd_mods.c  lyd_mods.h  modinfo.c  modinfo.h  module_dependencies.c  module_dependencies.h  nacm.c  (+64 more)
src/clientlib/: cl_common.c  cl_common.h  cl_subscription_manager.c  cl_subscription_manager.h  cl_trees.c  client_library.c  client_library.h
src/common/: sr_btree.c  sr_btree.h  sr_common.c  sr_common.h  sr_constants.h.in  sr_data_struct.c  sr_data_struct.h  sr_data_structs.c  sr_data_structs.h  sr_experimental.c  sr_experimental.h  sr_helpers.h  sr_logger.c  sr_logger.h  sr_mem_mgmt.c  sr_mem_mgmt.h  sr_protobuf.c  sr_protobuf.h  sr_utils.c  sr_utils.h
src/executables/: bin_common.h.in  breaks.out  srpd_aging.c  srpd_aging.h  srpd_common.c  srpd_common.h  srpd_common.h.in  srpd_oper_poll_diff.c  srpd_rotation.c  srpd_rotation.h  sysrepo-plugind.8  sysrepo-plugind.c  sysrepo-plugind.service.in  sysrepocfg.1  sysrepocfg.c  sysrepoctl.1  sysrepoctl.c  sysrepod.c
src/plugins/: common_db.c  common_db.h  common_json.c  common_json.h  common_json.h.in  common_lyb.c  common_lyb.h  common_lyb.h.in  ds_json.c  ds_lyb.c  ds_mongo.c  ds_redis.c  ntf_json.c  ntf_lyb.c
src/sr_cond/: sr_cond_futex.c  sr_cond_futex.h  sr_cond_pthread.c  sr_cond_pthread.h
src/utils/: error_format.c  error_format.h  nacm.c  nacm.h  netconf_acm.h  plugin_utils.c  plugins.c  private_candidate.c  private_candidate.h  sn_common.c  sn_common.h  sn_yang_push.c  sn_yang_push.h  sr_btree.c  sr_btree.h  sr_common.c  sr_common.h  subscribed_notifications.c  subscribed_notifications.h  trees.c  trees_internal.h  values.c  values.h  values_internal.h  xpath.c  xpath.h  xpath_utils.c
swig/: CMakeLists.txt  sysrepoPy.i
swig/cpp/: CMakeLists.txt  libSysrepo-cpp.pc.in
swig/golang/: README.md
swig/java/: CMakeLists.txt  libsysrepoJava.i
swig/lua/: CMakeLists.txt  libsysrepoLua.i  libsysrepoLua51.i  libsysrepoLua52.i  libsysrepoLua53.i  run_lua_test.sh  sysrepoLua.i
swig/lua51/: CMakeLists.txt  libsysrepoLua51.i
swig/lua52/: CMakeLists.txt  libsysrepoLua52.i
swig/lua53/: CMakeLists.txt  libsysrepoLua53.i
swig/python/: CMakeLists.txt  libsysrepoPython.i  sysrepo.i  sysrepoPy.i
swig/python2/: CMakeLists.txt  libsysrepoPython2.i
swig/python3/: CMakeLists.txt  libsysrepoPython3.i
swig/swig_base/: base.i  connection.i  cpp_classes.i  java_base.i  java_libsysrepoEnums.i  libsysrepoEnums.i  lua_base.i  python_base.i  session.i  structs.i  sysrepo.i  tree.i  value.i  xpath.i
test/: CMakeLists.txt  cl_test.c  cm_test.c  common_test.c  connection_manager.c  data_manager.c  dm_test.c  perf_test.c  rp_datatree_test.c  rp_node_stack_test.c  rp_test.c  session_manager.c  sm_test.c  xp_parser_test.c  xp_yang_test.c  xpath_processor_parser.c  xpath_processor_yang.c
test/data/: example-module.yang  example-module.yin  test_data.h  (+7 more)
tests/: CMakeLists.txt  ac_test.c  cl_fd_watcher_test.c  cl_notifications_test.c  cl_state_data_test.c  cl_test.c  cl_test2.c  cm_sm_test.c  cm_test.c  common.c  common.h.in  common_test.c  concurr_test.c  config.h.in  daemon_test.c  dm_test.c  md_test.c  measure_performance.c  mem_mgmt_test.c  mongoc_init.supp  nacm_cl_test.c  nacm_test.c  notifications_test.c  notifications_test_app.c  np_test.c  np_test_store.c  perf.c  perf_test.c  plugin_daemon_test.c  pm_test.c  pthread_barrier.c  pthread_barrier.h  rp_datatree_test.c  rp_dt_edit_test.c  rp_dt_edit_test_features.c  rp_dt_running_test.c  rp_dt_xpath_test.c  rp_test.c  run_python_test.sh  sm_test.c  (+42 more)
(+565 files in other folders)
